infra/k8s/zot/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zot-ingress
  namespace: socioprophet
  annotations:
    networking.gke.io/managed-certificates: registry-cert
    kubernetes.io/ingress.class: gce
spec:
  rules:
    - host: registry.socioprophet.ai
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: zot
                port: { number: 5000 }
